Bugfix and Refactor
Again we did a lot of work here:

* Due to casting the input parameters of the compare function passed to
  Quicksort not correctly posts ordering was messed up. Now we cast correctly
  to a pointer which points to the pointer of a page header not the header
  itself.

* Implemented goto-based error handling for most functions. In cases where
  we do not have much cleanup and not many possible errors to return we keep
  returning directly while indicating an error occurred.

* Some more style adjustments

* More concise bundling of all links to be found on the index

--- a/src/style.css
+++ b/src/style.css
@@ -3,17 +3,16 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	line-height: 1.6;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	max-width: 800px;
-	min-height: calc(100vh - 2rem);
+	min-height: calc(100vh - 3rem);
 	padding: 0.75rem;
 
 	font-family: "Source Sans 3", sans-serif;
 	font-optical-sizing: auto;
 	font-weight: 350;
 	font-style: normal;
-	font-size: 100%;
+	font-size: 105%;
 }
 
 main {
@@ -22,7 +21,7 @@ main {
 
 
 header {
-	margin-top: 2rem;
+	margin-top: 0.67em;
 }
 
 h1 {
@@ -40,25 +39,37 @@ pre {
 nav > ul {
 	list-style: none;
 	padding: 0;
+	display: flex;
+	align-items: baseline;
 }
 nav > ul > li {
-	display: inline-block;
 	margin-right: 1rem;
 }
 
-.index-block {
-	padding-top: 0.5rem;
+nav > ul > li > a {
+	font-weight: 600;
+}
+
+section {
+	padding-bottom: 0.5rem;
+}
+
+#index-title {
+	font-size: 26px;
+	margin-left: auto
 }
 
 #post-list div {
 	margin-bottom: 0.3em;
 }
-#post-list dt {
-	margin: 0;
+
+#post-list dt a {
+	text-decoration: none;
 }
 
 #post-list dd {
-	margin-top: 0.5em;
+	margin-top: 0;
+	margin-bottom: 1em;
 }
 
 #date-created, #date-updated {
